<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="3dp"
    app:cardCornerRadius="6dp"
    app:cardPreventCornerOverlap="true"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idWarehouse"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_codeWarehouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codeWarehouse"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_codeItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codeItem"
            android:textSize="18sp"
            android:maxLines="2"/>

        <TextView
            android:id="@+id/tv_nameItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameItem"
            android:textSize="18sp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>