<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="200dp"
    android:layout_centerVertical="true"
    android:layout_gravity="center"
    android:background="@drawable/rounded_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtClose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="7dp"
            android:gravity="start"
            android:text="X"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <EditText
            android:id="@+id/cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="@string/add_category"
            android:hint="@string/add_category"
            android:inputType="text" />

    <Button
        android:id="@+id/submit"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/save"
        android:textColor="#fff"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

</LinearLayout>